--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -10,9 +10,12 @@
     {% if questions %}
     <ol>
         {% for q in questions %}
-        <li> <a href="/polls/{{q.pk}}/">{{q.text}}</a> </li>
+        <li> <a href="{% url 'polls:detail' q.pk %}">{{q.text}}</a> </li>
         {% endfor %}
     </ol>
     {% endif %}
+
+    
+
 </body>
 </html>
