--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -8,7 +8,8 @@
 <body>
 
     {% if question.choice_set.all %}
-    <form>
+    <form method="POST" action="{% url 'polls:vote' question.pk %}">
+        {% csrf_token %}
         {% for c in question.choice_set.all %}
         <input type="checkbox" id="c{{c.pk}}"> <label for="c{{c.pk}}">{{c.text}}</label>
         <br>
